Template/css/main.css
/*** Foundation base tweak ***/
.columns {
	padding: 0px !important;
}
/*** Setup ***/
* {
	font-family: 'Droid Sans', sans-serif;
}
#LAYER_ALL {
  position: absolute;
  width: 100%;
  height: 100%;
}
#LAYER_MID {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 2;
}
#LAYER_TOP {
  position: absolute;
  width: 100%;
  z-index: 3;
}
/*** Projects ***/
#header {
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: #878787;
}
.header-text {
  position: absolute;
  width: 100%;
  top: 50%;
	left: 72px;
	color: white;
	font-weight: 700;
  font-size: 90px;
	line-height: 90px;
}
#projects-wrapper {
  position: relative;
  top: 100%;
	
	margin: 0 0 0 0 !important;
}
.project {
	height: 50%;
}
.project > figcaption {
	font-weight: 700;
	color: #878787;
	top: 20%;
}

/*** Menu ***/
#Menu{
    width: 100%;
    margin-bottom: 1.5em;
    padding-top: 2em;
    padding-bottom: 2em;
    position: fixed;
    
    text-align: center;
    background-color: #888888;
    display: block;
    font-size: 20px;
}

nav a{
    padding: 2.5em;
    color: #eeeeee;
}

#icon{
    padding-top: 1.5em;
    background-image: url(../img/sprinklesCW.png);
    background-repeat: no-repeat;
}

#menuBTN{
    background-image: url(../img/menuS.png);
    background-repeat: no-repeat;
    position: fixed;
    top:1.5em;
    padding-bottom: 2.5em;
    padding-top: 1em;
    margin-left: 1.5em;
    
    cursor: pointer;
    visibility: visible;
}

#leftArrow, #rightArrow{
    position: fixed;
    background-repeat: no-repeat;
}

#menuNav{
    margin-top: 3em;
    visibility: hidden;
    
}



/*My Overlay Menu */
.overlayMenu{
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.7s, visibility 0s 0.7s;
}

.overlayMenu.open{
    opacity: 1;
    visibility: visible;
    transition: opacity 0.5s, visibility 0s 0.5s;
	transition-duration:1.5;
    width: 80%;
    height: 100%;
    display: block;
    background: #333;
    z-index: 9003;
}

.overlayMenu nav{
    display: block;
    width: 80%;
    height: 100%;
    background: #333333;
	text-align: center;
	font-size: 35px;
    z-index: 9003;
}

.overlayMenu nav ul{
    /*opacity: 0.4;*/
    transform: translateY(-25%) rotateX(35deg);
    transition: transform 0.5s, opacity 0.5s;
}

.overlayMenu.open nav ul{
    opacity: 1;
    transform: rotateX(0deg);
}

.overlayMenu.close nav ul{
    transform: translateY(25%) rotateX(-35deg);
}

.navA{
	text-align: center;
	font-size: 32px;
	display: block;
}

#closeBTN{
float: right;
background-repeat: no-repeat;
background-image: url(../img/x-button.png);
}

#prBox{
	position: fixed;
    width: 80%;
    height: 100%;
    display: block;
    background: #333;
}

